# app/internal/handler/catch/service.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"fmt"
+	"io"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -27,6 +29,34 @@ func (h *Handler) clearCache(c *gin.Context) {
 	if err := h.services.Service.ClearCache(); err != nil {
 		newErrorResponse(c, http.StatusBadRequest, op, err)
 		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"result": "ok",
+	})
+}
+
+func (h *Handler) test(c *gin.Context) {
+
+	const op = "handler.service.test"
+
+	body, err := io.ReadAll(c.Request.Body)
+	if err != nil {
+		newErrorResponse(c, http.StatusBadRequest, op+".ReadBody", err)
+		return
+	}
+
+	fmt.Printf("%s\n", string(body))
+
+	if h.config.Log.OutputInFile {
+		h.logger.Info(string(body))
+	}
+
+	queryParams := c.Request.URL.Query()
+	for key, values := range queryParams {
+		for _, value := range values {
+			h.logger.Info("Query parameters", h.logger.Str(key, value))
+		}
 	}
 
 	c.JSON(http.StatusOK, gin.H{
